# robust-python-skills

./: README.md
skills/python-init/: SKILL.md
skills/python-init/assets/: gitignore.template  pre-commit-config.yaml  pyproject.toml
skills/python-robust-code/: SKILL.md
skills/python-robust-code/references/: CODE-STYLE.md  DATA-MODELS.md  ERROR-HANDLING.md
skills/python-testing/: SKILL.md
skills/python-tooling/: SKILL.md
skills/python-tooling/references/: CI.md  PRE-COMMIT.md  RUFF.md
skills/python-types/: SKILL.md
